# scikit-eit

./: .gitignore  CONTRIBUTORS.md  LICENSE  README.md  paper_1_figures.ipynb  pyproject.toml
docs/: gettingstarted.rst  index.rst  reference.rst
skeit/: __init__.py  eit.py  mesh.py
